push update to 1.21.1 (currently only on my maven available)