@@ -6,6 +6,7 @@ import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import novamachina.exnihilosequentia.world.item.crafting.HarvestRecipe;
 import novamachina.exnihilosequentia.world.item.crafting.ItemStackWithChance;
 
@@ -18,8 +19,9 @@ public class EmiHarvestingRecipe extends AbstractEmiRecipe {
     private final int x;
     private final int y;
 
-    public EmiHarvestingRecipe(HarvestRecipe recipe) {
-        super(recipe);
+    public EmiHarvestingRecipe(RecipeHolder<HarvestRecipe> recipeHolder) {
+        super(recipeHolder.id());
+        HarvestRecipe recipe = recipeHolder.value();
         this.inputs.add(EmiIngredient.of(recipe.getInput()));
         for (ItemStackWithChance stack : recipe.getDrops()) {
             this.outputs.add(EmiStack.of(stack.getStack()).setChance(stack.getChance()));
@@ -76,7 +78,7 @@ public class EmiHarvestingRecipe extends AbstractEmiRecipe {
     @Override
     public void addWidgets(WidgetHolder widgetHolder) {
         int y = getDisplayHeight() - 18;
-        widgetHolder.addSlot(inputs.get(0), 0, y/2);
+        widgetHolder.addSlot(inputs.getFirst(), 0, y/2);
         widgetHolder.addTexture(EmiTexture.EMPTY_ARROW, 19, y/2+1);
         for (int i = 0; i < outputs.size(); i++) {
             int slotX = 43 + i % 7 * 18;
